--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations</h1>
-    <h2>This is my first page</h2>
+    <h1>This is me!</h1>
+    <h2>This is my site!</h2>
   </div>
 </body>
 </html>
